# projeto-microsservico

./: Dockerfile-app  Dockerfile-pgsql  README.md  docker-compose.yml  main.py  pyproject.toml  run_tests.py  settings.toml
app/: create_app.py
app/application/interfaces/: documento_interface.py  unit_of_work_interface.py
app/application/use_cases/: buscar_documentos.py  criar_documento.py
app/domain/entities/: documento_entity.py  filtro_entity.py  http_request_entity.py  http_response_entity.py
app/domain/interfaces/: documento_interface.py  filtro_interface.py
app/infra/configurations/: settings.py
app/infra/database/: database.py
app/infra/engine/: engine.py
app/infra/interfaces/: database_interface.py  engine_interface.py  session_interface.py  settings_interface.py
app/infra/middleware/: middleware.py
app/infra/models/sqlmodel/: documento_model.py
app/infra/repoositories/: documento_repository.py
app/infra/schemas/: documento_schema.py  filtro_schema.py
app/infra/session/: session.py
app/infra/unit_of_work/: documento.py
app/infra/utils/: calcular_latitude_longitude.py
app/presentation/adapters/: dataclass_adapter.py  documento_adapters.py  http_request_adapter.py  http_response_adapter.py
app/presentation/composers/database/: __init__.py  database_composer.py
app/presentation/composers/documento/: buscar_documento_composer.py  criar_documento_composer.py
app/presentation/routes/: __init__.py  documento_routes.py
tests/: carga_inicial.py  conftest.py
tests/integration/: test_a1_documento.py
(+2 files in other folders)
