[project]
name = "projeto-microsservico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
    "psycopg2-binary>=2.9.11",
]
